<resources>
    <string name="app_name">Foodie</string>
    <string name="title_activity_new_dish">NewDishActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dish_name">Dish Name</string>
    <string name="location">Location</string>
    <string name="notes">Notes</string>
    <string name="content_description_media">Dish</string>
    <string name="add_new_item">Add New Item</string>
    <string name="add_fragment_title">New Dish</string>
    <string name="dish_name_validation">Must enter a name</string>

    <string name="delete">Delete</string>
    <string name="edit_item">Edit Item</string>
    <string name="selected_dish_content_desc">Selected Dish</string>
    <string name="dish_description">current dish</string>

    <string name="delete_question">Are you sure you want to delete this dish?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="delete_dialog_title">Delete Dish</string>

    <string name="switch_view">Toggle between gallery and list view</string>
    <string name="add_new_dish">New Dish</string>

    <string name="edit_dish">Edit</string>
    <string name="get_started"><b>Get Started</b></string>
    <string name="call_to_action_add">Add New Dish</string>
    <string name="welcome">Welcome to Foodie</string>
    <string name="promo_details">Capture and share your foodie adventures effortlessly. No accounts or lengthy setup needed.</string>
</resources>