<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DishDetailFragment">

    <ImageView
        android:id="@+id/imgSelectedDish"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14"
        android:contentDescription="@string/dish_description"/>

    <TextView
        android:id="@+id/tvDishName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="32dp"
        android:textSize="20sp"
        tools:text="Spaghetti" />

    <TextView
        android:id="@+id/tvDishLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        tools:text="Olive Garden" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingStart="16dp"
        android:textSize="14sp"
        tools:text="08/24/2021" />


    <TextView
        android:id="@+id/tvDishNotes"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="16dp"
        tools:text="ahhhmazing place" />

    <Button
        android:id="@+id/delete_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:text="@string/delete" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:layout_marginBottom="@dimen/margin_between_elements"
        android:contentDescription="@string/edit_item"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

</LinearLayout>